--- a/index.html
+++ b/index.html
@@ -59,23 +59,27 @@
         <input type="number" id="currentShares" placeholder="Nombre d'actions actuelles">
         <input type="number" id="newSharePrice" placeholder="Prix de la nouvelle action">
         <input type="number" id="addShares" placeholder="Nombre d'actions à ajouter">
+        <input type="number" id="transactionFees" placeholder="Frais de transaction en %" value="0.5" step="0.1">
         <button onclick="calculate()">Calculer</button>
         <div id="result">Nouveau PRU : </div>
     </div>
 
     <script>
+        // Afficher la valeur par défaut des frais de transaction
+        document.getElementById('transactionFees').value = "0.5";
+
         function calculate() {
             let currentPRU = parseFloat(document.getElementById('currentPRU').value);
             let currentShares = parseFloat(document.getElementById('currentShares').value);
             let newSharePrice = parseFloat(document.getElementById('newSharePrice').value);
             let addShares = parseFloat(document.getElementById('addShares').value);
+            let transactionFees = parseFloat(document.getElementById('transactionFees').value) / 100; // Convertir le pourcentage en décimal
 
             let newPRU = currentPRU;
+            let totalNewShares = newSharePrice * addShares;
+            let fees = totalNewShares * transactionFees;
 
-            for (let i = 0; i < addShares; i++) {
-                newPRU = ((newPRU * currentShares) + newSharePrice) / (currentShares + 1);
-            }
-            newPRU += (0.05 * newSharePrice) * addShares
+            newPRU = ((newPRU * currentShares) + totalNewShares + fees) / (currentShares + addShares);
 
             document.getElementById('result').innerHTML = `Nouveau PRU : ${newPRU.toFixed(2)}`;
         }
