Try to rename a title to test the APK
Updated placeholder text for current PRU input.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
     <div class="container">
         <h2>Calculateur de PRU</h2>
-        <input type="number" id="currentPRU" placeholder="Votre PRU actuel">
+        <input type="number" id="currentPRU" placeholder="Votre CACA actuel">
         <input type="number" id="currentShares" placeholder="Nombre d'actions actuelles">
         <input type="number" id="newSharePrice" placeholder="Prix de la nouvelle action">
         <input type="number" id="addShares" placeholder="Nombre d'actions à ajouter">
@@ -86,3 +86,4 @@
     </script>
 </body>
 </html>
+
